# chess-rs

./: .gitignore  Cargo.toml
src/: main.rs  minimax.rs
static_build/: index.html
