[package]
name = "chess-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
shakmaty = "0.24.0"
rocket_contrib = "0.4.11"
include_dir = "0.7.3"
